--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,6 @@ export(outlier)
 export(relation)
 import(ggplot2)
 import(magrittr)
+importFrom(dplyr,pull)
 importFrom(scales,percent)
+importFrom(tibble,is_tibble)
