--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,10 @@
 Package: board
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Data profiling with shiny input
+Version: 0.0.1
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Jinhwan", "Kim", , "hwanistic@gmail.com", role = c("aut", "cre"))
+Description: Provides data profiling functions while gets prarmeter as text input.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
