--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,12 @@ Authors@R:
     person("Jinhwan", "Kim", , "hwanistic@gmail.com", role = c("aut", "cre"))
 Description: Provides data profiling functions while gets prarmeter as text input.
 License: MIT + file LICENSE
+Imports:
+    ggplot2,
+    magrittr,
+    dplyr,
+    scales,
+    tibble
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
