--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,17 @@ export(distribute)
 export(dominate)
 export(ggpie)
 export(isNormal)
+export(mod_distributionModule_server)
+export(mod_distributionModule_ui)
 export(outlier)
 import(ggplot2)
 import(magrittr)
+import(shiny)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(scales,percent)
+importFrom(shiny,NS)
+importFrom(shiny,tagList)
+importFrom(shinydashboardPlus,descriptionBlock)
+importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
