article with pkgdown built

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,6 @@ Imports:
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
+Suggests: 
+    rmarkdown
+URL: https://github.com/statgarten/board
