chore: redesign distribution module
cross tabulation removed temporary

Closes #6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(outlier)
 import(ggplot2)
 import(magrittr)
 import(shiny)
+import(shinyjs)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(scales,percent)
