build: modify namespace (shinyjs)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,12 +12,14 @@ export(outlier)
 import(ggplot2)
 import(magrittr)
 import(shiny)
-import(shinyjs)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(scales,percent)
 importFrom(shiny,NS)
 importFrom(shiny,tagList)
 importFrom(shinydashboardPlus,descriptionBlock)
+importFrom(shinyjs,hidden)
+importFrom(shinyjs,hide)
+importFrom(shinyjs,show)
 importFrom(tibble,as_tibble)
 importFrom(tibble,is_tibble)
