--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Imports:
     dplyr,
     scales,
     tibble,
-    shiny
+    shiny,
+    shinydashboardPlus
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
