--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Imports:
     scales,
     tibble,
     shiny,
-    shinydashboardPlus
+    shinydashboardPlus,
+    shinyjs
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
